k3s/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockpit
  labels:
    name: cockpit
    app: cockpit-automacao
    version: "1.0.2"
